# Randomized-Image-Occlusion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml
docs/images/: .gitkeep
src/randomized_occlusion/: _version.py  bootstrap.py  config.json  config.md  manifest.json  resources.py
src/randomized_occlusion/collection/: __init__.py  gateways.py  note_factory.py  note_reader.py
src/randomized_occlusion/config/: __init__.py  config_service.py  defaults.py  render_config.py
src/randomized_occlusion/domain/: __init__.py  card_options.py  codec.py  geometry.py  structure.py  structure_set.py
src/randomized_occlusion/editor/: bridge.py  browser_integration.py  dialog.py  dialog_host.py  editor_integration.py  launcher.py  savers.py
src/randomized_occlusion/notetype/: factory.py  installer.py  spec.py  templates.py
src/randomized_occlusion/ops/: create_note.py  runner.py  update_note.py
src/randomized_occlusion/web/editor/: marker.css  marker.js
src/randomized_occlusion/web/review/: render.js
tests/: test_build.py  test_card_options.py  test_codec.py  test_config_service.py  test_edge_cases.py  test_fuzz.py  test_geometry.py  test_installer.py  test_note_factory.py  test_note_reader.py  test_render_config.py  test_structure_set.py  test_templates.py
tests/js/: dom.js  harness.js  invariants.test.js  loader.js  precision.test.js  render.test.js  render_integration.test.js  single_cycler.test.js
