[project]
name = "randomized-image-occlusion"
version = "1.1.1"
description = "Anki add-on: image occlusion that randomises label placement each review."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# This project is distributed as an Anki add-on (.ankiaddon), not a PyPI wheel.
# The dependencies below are only needed for development/testing.
[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]
# Anki's own libraries (`aqt`, `anki`) exist only inside Anki at runtime, so CI
# does NOT install them — mypy uses `ignore_missing_imports` instead. Install
# this extra locally (`pip install -e ".[anki]"`) ONLY if you want your editor to
# resolve `from aqt import ...` / `from anki import ...` and offer autocomplete;
# it is never required to run the tests. (It pulls PyQt6, so it's a large install.)
anki = ["aqt>=23.10", "anki>=23.10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true   # aqt/anki are not installed in CI
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
